samples/_failures_safe/1761364051_1deb90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c43ea53.c: In function ‘main’:
./samples/SAFE/__tmp_1c43ea53.c:172:9: error: expected declaration or statement at end of input
  172 |         printf("\n");
      |         ^~~~~~
./samples/SAFE/__tmp_1c43ea53.c:172:9: error: expected declaration or statement at end of input
